k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: configmap-secrets-hardcoded
  name: configmap-secrets-hardcoded
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configmap-secrets-hardcoded
  template:
    metadata:
      labels:
        app: configmap-secrets-hardcoded
    spec:
      containers:
      - name: web
        image: gcr.io/kube-teach1/configmap-secrets-hardcoded:v1.0.0
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
