k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: configmap-secrets-hardcoded
spec:
  selector:
    app: configmap-secrets-hardcoded
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 32132
    port: 80
    targetPort: 8080
